added pickaxes + scroll down button

--- a/templates/fortnite.html
+++ b/templates/fortnite.html
@@ -1,6 +1,6 @@
 {% include "layouts/navbar.html" %}
 <!DOCTYPE html>
-</html lang="en">
+<html lang="en">
 </head>
     <meta charset="UTF-8">
     <title>Fortnite</title>
@@ -62,7 +62,7 @@ body {
     <button onclick="scrollWin()" style="position:fixed">Pickaxe</button><br><br>
     <script>
 function scrollWin() {
-  window.scrollTo(0, 1000);
+  window.scrollTo(0, 2070);
 }
 </script>
 
@@ -169,6 +169,179 @@ function scrollWin() {
             <img src="/static/assets/Fortnite/triple-threat-icon.png"/>
             <div class="hovercap">Triple Threat</div> </div></td>
     </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/black-knight-icon.png"/>
+            <div class="hovercap">Black Knight Release Date</div></div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/blue-squire-icon.png"/>
+            <div class="hovercap">Blue Squire</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/sparkle-specialist-icon.png"/>
+            <div class="hovercap">Sparkle Specialist</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/dark-voyager-icon.png"/>
+            <div class="hovercap">Dark Voyager</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/elite-agent-icon.png"/>
+            <div class="hovercap">Elite Agent</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/black-knight-icon.png"/>
+            <div class="hovercap">Black Knight Release Date</div></div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/blue-squire-icon.png"/>
+            <div class="hovercap">Blue Squire</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/sparkle-specialist-icon.png"/>
+            <div class="hovercap">Sparkle Specialist</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/dark-voyager-icon.png"/>
+            <div class="hovercap">Dark Voyager</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/elite-agent-icon.png"/>
+            <div class="hovercap">Elite Agent</div> </div></td>
+    </tr>
 </table>
 
 </div>
+
+<table>
+<tr>
+    <td><div class="hoverwrap">
+        <img src="/static/assets/Fortnite/pickaxes/axeroni-icon.png"/>
+        <div class="hovercap">Axeroni</div> </div></td>
+    <td><div class="hoverwrap">
+        <img src="/static/assets/Fortnite/pickaxes/bitemark-icon.png"/>
+        <div class="hovercap">Bitemark</div> </div></td>
+    <td><div class="hoverwrap">
+        <img src="/static/assets/Fortnite/pickaxes/bottom-feeder-icon.png"/>
+        <div class="hovercap">Bottom Feeder</div> </div></td>
+    <td><div class="hoverwrap">
+        <img src="/static/assets/Fortnite/pickaxes/candy-axe-icon.png"/>
+        <div class="hovercap">Candy Axe</div> </div></td>
+    <td><div class="hoverwrap">
+        <img src="/static/assets/Fortnite/pickaxes/chomp-jr.-icon.png"/>
+        <div class="hovercap">Chomp Jr</div> </div></td>
+</tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/disco-brawl-icon.png"/>
+            <div class="hovercap">Disco Brawl</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/ice-breaker-icon.png"/>
+            <div class="hovercap">Ice Breaker</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/nite-owl-icon.png"/>
+            <div class="hovercap">Nite Owl</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/party-animal-icon.png"/>
+            <div class="hovercap">Party Animal</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/pick-squeak-icon.png"/>
+            <div class="hovercap">Pick Squeak</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/pink-flamingo-icon.png"/>
+            <div class="hovercap">Pink Flamingo</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/plunja-icon.png"/>
+            <div class="hovercap">Plunja</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/pulse-axe-icon.png"/>
+            <div class="hovercap">Pulse Axe</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/rainbow-smash-icon.png"/>
+            <div class="hovercap">Rainbow Smash</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/reaper-icon.png"/>
+            <div class="hovercap">Reaper</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/slam-dunk-icon.png"/>
+            <div class="hovercap">Slam Dunk</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/spectral-axe-icon.png"/>
+            <div class="hovercap">Spectral Axe</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/tooth-pick-icon.png"/>
+            <div class="hovercap">Tooth Pick</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/you-shouldnt-have-icon.png"/>
+            <div class="hovercap">You Shouldn't Have</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/jingu-bang-icon.png"/>
+            <div class="hovercap">Jingu Bang</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/axeroni-icon.png"/>
+            <div class="hovercap">Axeroni</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bitemark-icon.png"/>
+            <div class="hovercap">Bitemark</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bottom-feeder-icon.png"/>
+            <div class="hovercap">Bottom Feeder</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/candy-axe-icon.png"/>
+            <div class="hovercap">Candy Axe</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/chomp-jr-icon.png"/>
+            <div class="hovercap">Chomp Jr</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/axeroni-icon.png"/>
+            <div class="hovercap">Axeroni</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bitemark-icon.png"/>
+            <div class="hovercap">Bitemark</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bottom-feeder-icon.png"/>
+            <div class="hovercap">Bottom Feeder</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/candy-axe-icon.png"/>
+            <div class="hovercap">Candy Axe</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/chomp-jr-icon.png"/>
+            <div class="hovercap">Chomp Jr</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/axeroni-icon.png"/>
+            <div class="hovercap">Axeroni</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bitemark-icon.png"/>
+            <div class="hovercap">Bitemark</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bottom-feeder-icon.png"/>
+            <div class="hovercap">Bottom Feeder</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/candy-axe-icon.png"/>
+            <div class="hovercap">Candy Axe</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/chomp-jr-icon.png"/>
+            <div class="hovercap">Chomp Jr</div> </div></td>
+    </tr>
+    <tr>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/axeroni-icon.png"/>
+            <div class="hovercap">Axeroni</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bitemark-icon.png"/>
+            <div class="hovercap">Bitemark</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/bottom-feeder-icon.png"/>
+            <div class="hovercap">Bottom Feeder</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/candy-axe-icon.png"/>
+            <div class="hovercap">Candy Axe</div> </div></td>
+        <td><div class="hoverwrap">
+            <img src="/static/assets/Fortnite/pickaxes/chomp-jr-icon.png"/>
+            <div class="hovercap">Chomp Jr</div> </div></td>
+    </tr>
+</table>
