--- a/templates/petplanner.html
+++ b/templates/petplanner.html
@@ -76,6 +76,9 @@
             toDoContainer.removeChild(paragraph);
         })
     })
+    function myOnClickFn(){
+        document.location.href="pethistory.html";
+    }
 </script>
 </body>
 {% endblock %}
