--- a/templates/testquiz.html
+++ b/templates/testquiz.html
@@ -5,97 +5,30 @@
     <meta charset="UTF-8">
     <title>Quiz</title>
     <script>
-        function Quiz(questions) {
-            this.score = 0;
-            this.questions = questions;
-            this.questionIndex = 0;
-        }
+        class Question:
+        def __init__(self, prompt, answer):
+        self.prompt = prompt
+        self.answer = answer
 
-        Quiz.prototype.getQuestionIndex = function() {
-            return this.questions[this.questionIndex];
-        }
+        question_prompts = [
+            "What color are apples?\n(a) Red/Green\n(b)Orange",
+            "What color are bananas?\n(a) Red/Green\n(b)Yellow",
+        ]
 
-        Quiz.prototype.guess = function(answer) {
-            if(this.getQuestionIndex().isCorrectAnswer(answer)) {
-                this.score++;
-            }
+        questions = [
+            Question(question_prompts[0], "a"),
+            Question(question_prompts[1], "b"),
+        ]
 
-            this.questionIndex++;
-        }
+        def run_quiz(questions):
+        score = 0
+        for question in questions:
+        answer = input(question.prompt)
+        if answer == question.answer:
+        score += 1
+        print("you got", score, "out of", len(questions))
 
-        Quiz.prototype.isEnded = function() {
-            return this.questionIndex === this.questions.length;
-        }
-
-
-        function Question(text, choices, answer) {
-            this.text = text;
-            this.choices = choices;
-            this.answer = answer;
-        }
-
-        Question.prototype.isCorrectAnswer = function(choice) {
-            return this.answer === choice;
-        }
-
-
-        function populate() {
-            if(quiz.isEnded()) {
-                showScores();
-            }
-            else {
-                // show question
-                var element = document.getElementById("question");
-                element.innerHTML = quiz.getQuestionIndex().text;
-
-                // show options
-                var choices = quiz.getQuestionIndex().choices;
-                for(var i = 0; i < choices.length; i++) {
-                    var element = document.getElementById("choice" + i);
-                    element.innerHTML = choices[i];
-                    guess("btn" + i, choices[i]);
-                }
-
-                showProgress();
-            }
-        };
-
-        function guess(id, guess) {
-            var button = document.getElementById(id);
-            button.onclick = function() {
-                quiz.guess(guess);
-                populate();
-            }
-        };
-
-
-        function showProgress() {
-            var currentQuestionNumber = quiz.questionIndex + 1;
-            var element = document.getElementById("progress");
-            element.innerHTML = "Question " + currentQuestionNumber + " of " + quiz.questions.length;
-        };
-
-        function showScores() {
-            var gameOverHTML = "<h1>Result</h1>";
-            gameOverHTML += "<h2 id='score'> Your scores: " + quiz.score + "</h2>";
-            var element = document.getElementById("quiz");
-            element.innerHTML = gameOverHTML;
-        };
-
-        // create questions here
-        var questions = [
-            new Question("Hyper Text Markup Language Stand For?", ["JavaScript", "XHTML","CSS", "HTML"], "HTML"),
-            new Question("Which language is used for styling web pages?", ["HTML", "JQuery", "CSS", "XML"], "CSS"),
-            new Question("Which is not a JavaScript Framework?", ["Python Script", "JQuery","Django", "NodeJS"], "Django"),
-            new Question("Which is used for Connect To Database?", ["PHP", "HTML", "JS", "All"], "PHP"),
-            new Question("Webdevtrick.com is about..", ["Web Design", "Graphic Design", "SEO & Development", "All"], "All")
-        ];
-
-        // create quiz
-        var quiz = new Quiz(questions);
-
-        // display quiz
-        populate();
+        run_quiz(questions)
 
     </script>
     <style>
