--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,7 +19,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/templates/cssFiles/style.css">
+    <link rel="stylesheet" href="/static/assets/scss">
     <link rel="icon" href="/static/assets/pawscursor.png">
     <title>{{ name }} | {{ project }} </title>
     <link rel="shortcut icon" href="/static/assets/pawscursor.png">
