--- a/crud/templates/crud/crud_async.html
+++ b/crud/templates/crud/crud_async.html
@@ -246,10 +246,10 @@
                             <thead>
                             <tr>
                                 <th>ID</th>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Password</th>
-                                <th>Phone</th>
+                                <th>Animal</th>
+                                <th>Diet</th>
+                                <th>Habitat</th>
+                                <th>Family</th>
                             </tr>
                             </thead>
                             <tbody id="result">
@@ -259,14 +259,12 @@
                                 Prepare table for display
                                     caution: phone number needs "~" format step to force type to string
                                 -->
-                                {% set pn = "" ~ row['phone'] %}
-                                {% set pnf = "(" ~ pn[0:3] ~ ")" ~ pn[3:6] ~ "-" ~ pn[6:10] %}
                                 <tr>
                                     <td>{{ row['userID'] }}</td>
                                     <td>{{ row['name'] }}</td>
                                     <td>{{ row['email'] }}</td>
                                     <td>{{ row['password'] }}</td>
-                                    <td>{{ pnf }}</td>
+                                    <td>{{ row['phone'] }}</td>
                                 </tr>
                             {% endfor %}
                             </tbody>
@@ -282,18 +280,18 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th><label for="name">Name</label></th>
-                            <th><label for="email">Email</label></th>
-                            <th><label for="password">Password</label></th>
-                            <th><label for="phone">Phone</label></th>
+                            <th><label for="name">Animal</label></th>
+                            <th><label for="email">Diet</label></th>
+                            <th><label for="password">Habitat</label></th>
+                            <th><label for="phone">Family</label></th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
                             <td><input type="text" name="name" id="name" required></td>
-                            <td><input type="email" name="email" id="email" placeholder="abc@xyz.org" required></td>
+                            <td><input type="email" name="email" id="email" required></td>
                             <td><input type="password" name="password" id="password" required></td>
-                            <td><input type="tel" name="phone" id="phone" pattern="[0-9]{10}" placeholder="1234567890" required></td>
+                            <td><input type="tel" name="phone" id="phone" required></td>
                             <td ><button onclick="create_User()">Create</button></td>
 
                         </tr>
@@ -334,7 +332,7 @@
                             <table id="update_table">
                                 <tr>
                                     <th><label for="update_userid">ID</label></th>
-                                    <th><label for="update_name">Name</label></th>
+                                    <th><label for="update_name">Animal</label></th>
                                 </tr>
                                 <tr>
                                     <td>
