--- a/templates/petplanner.html
+++ b/templates/petplanner.html
@@ -53,6 +53,12 @@
 <h1>Welcome To Pranav's Page</h1>
 <p>Welcome to this page, in this page users will be able to input text through a to do list format in order to plan out how they will adopt a pet. The purpose of this page is for users to plan out the process it takes to adopt a pet and the do's and dont's behind it. We encourage users to also check out the variuous other pages we have on our website which will give people a better undestanding behind the process of adopting a pet and how to do so. </p>
 <h1>Pet Adoption Planner</h1>
+<div>
+    <p>Click the button once you have made a plan to make tasks to get this plan done!</p>
+    <a href="https://tanayteamfood.tk/Enclosures/">
+        <button>Tasks!</button>
+    </a>
+</div>
 <div class="container">
     <input id="inputField" type="text"><button id="addToDo">+</button>
     <div class="to-dos" id="toDoContainer">
