--- a/templates/petplanner.html
+++ b/templates/petplanner.html
@@ -55,7 +55,7 @@
 <h1>Pet Adoption Planner</h1>
 <div>
     <p>Click the button once you have made a plan to make tasks to get this plan done!</p>
-    <a href="https://tanayteamfood.tk/Enclosures/">
+    <a href="https://tanayteamfood.tk/todo/">
         <button>Tasks!</button>
     </a>
 </div>
