--- a/crud3/templates/crud/search.html
+++ b/crud3/templates/crud/search.html
@@ -3,6 +3,8 @@
 inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 -->
 {% include "layouts/navbar.html" %}
+<title>Search</title>
+<body style="font-family: Baskerville" </body>
 
 {% block meta %}
     <title>SQL search</title>
