added new api and experimented with background

--- a/templates/trivia.html
+++ b/templates/trivia.html
@@ -2,7 +2,7 @@
 {% include "layouts/navbar.html" %}
 <body>
 <html>
-<title>Trivia Api</title>
+<title>Trivia API</title>
 <style>
     .button1 {
         background-color: white;
@@ -73,6 +73,7 @@
         </tr>
     </table>
 </div>
+
 {% block background %}
     <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
     <script src="{{ url_for('static', filename='vanta.fog.min.js') }}"></script>
