--- a/templates/home.html
+++ b/templates/home.html
@@ -25,6 +25,9 @@
     </style>
 </head>
 <br>
+=======
+
+
 </head>
 <br>
 <body style="background-image: url('/static/background.jpeg');" onload="myFunction()">
@@ -79,11 +82,12 @@
         <p> <a href="/study">Study Hall</a> </p>
         <p> <a href="/volunteer">Volunteer!</a> </p>
     </div>
-
 </div>
 </body>
 </html>
 
+
+{% endblock %}
 
 {% block background %}
 
