formatted all search pages

--- a/database/templates/database/searchdatabase.html
+++ b/database/templates/database/searchdatabase.html
@@ -10,8 +10,22 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
 {% endblock %}
 
 {% block body %}
+    <style>
+        table, td, th {
+            border: 10px solid #1e30a4;
+            padding: 50px;
+        }
+        td, th {
+            text-align:center;
+            color: #1e30a4;
+        }
+        table{
+            width: 100%;
+            margin: auto;
+        }
+    </style>
     <body style="background-color:powderblue; height: 2000px">
-    <h1>Database Seacher(different from CRUD)</h1>
+    <h1>Database Seacher</h1>
     <div class="container py-4 bg-primary">
         <!-- heading -->
         <header class="pb-3 mb-4 border-bottom">
@@ -83,7 +97,7 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
                         const div = document.createElement("div");
                         let table = "<table>"
                         for (let i = 0; i < data.length; i++) {
-                            table += "<tr><td>"+" | " + data[i].name + "</td><td>"+" | " + data[i].place + "</td><td>" +" | "+ data[i].review + "</td><td>" +" | "+ "</td></tr>"
+                            table += "<tr><td>" + data[i].name + "</td><td>" + data[i].place + "</td><td>" + data[i].review + "</td></tr>"
                             div.innerHTML = table
                             resultContainer.appendChild(div);
                         }
