--- a/flight/templates/flight/flight.html
+++ b/flight/templates/flight/flight.html
@@ -104,9 +104,9 @@
                     <table class="table">
                         <thead>
                         <tr>
-                            <th><label for="name">Name</label></th>
+                            <th><label for="name">Airline Name</label></th>
                             <th><label for="departingLocation">Departing Location</label></th>
-                            <th><label for="arrivalLocation">arrivalLocation</label></th>
+                            <th><label for="arrivalLocation">Arrival Location</label></th>
                             <th><label for="departingTime">Departing Time</label></th>
                             <th><label for="arrivalTime">Arrival Time</label></th>
                         </tr>
@@ -114,7 +114,7 @@
                         <tbody>
                         <tr>
                             <td><input type="text" name="name" id="name" required></td>
-                            <td><input type="departingLocation" name="departingLocation" id="departingLocation" placeholder="abc@xyz.org" required></td>
+                            <td><input type="departingLocation" name="departingLocation" id="departingLocation" required></td>
                             <td><input type="arrivalLocation" name="arrivalLocation" id="arrivalLocation" required></td>
                             <td><input type="departingTime" name="departingTime" id="departingTime" required></td>
                             <td><input type="arrivalTime" name="arrivalTime" id="arrivalTime" required></td>
