--- a/templates/pbl/hotels.html
+++ b/templates/pbl/hotels.html
@@ -139,9 +139,9 @@
         {% endfor %}
     {% endfor %}
 </table>
-<iframe id="hotelLocation">
+<!--<iframe id="hotelLocation">-->
 
-</iframe>
+<!--</iframe>-->
 </body>
 </html>
 
