--- a/templates/forum.html
+++ b/templates/forum.html
@@ -36,5 +36,29 @@
         <p style="font-size: x-large"id="wave"><strong> {{name}}</strong></p>
     </div>
 
+    <h1 style="text-align: left">Other Support and Advice</h1>
+    <p style="color: black">
+        <br>
+        <a href="https://ratemyteachers.com/us/california/san-diego/del-norte-high-school">Rate My Teachers San Diego</a>
+        <br>
+        <br>
+        <a href="https://www.powayusd.com/en-US/Schools/HS/DNHS/Contacts/Staff-Directory">Del Norte Staff Directory</a>
+        <br>
+        1. Utilize your accesses, sources, and opportunities.
+        <br>
+
+        2. Participate in a sport or activity and commit to it.
+        <br>
+        3. Your GPA and test scores are not everything.
+        <br>
+        4. Find experience as soon as possible.
+        <br>
+        5. Be yourself. Have fun and enjoy it while it lasts.
+
+        <br>
+
+    </p>
+
     <body>
+
 </html>
