FAQ and Image map

--- a/templates/aboutnathan.html
+++ b/templates/aboutnathan.html
@@ -44,7 +44,7 @@
         <h3 class="header">Contributions</h3>
         <a href="worldclock.html">World Clock</a>
         <br>
-        <a href="weather.html">Weather</a>
+        <a href="layouts/weather.html">Weather</a>
     </div>
     <div class="col-sm">
         <h1 class="header">About Me</h1>
