--- a/templates/games.html
+++ b/templates/games.html
@@ -55,7 +55,7 @@
             <a href="/numberguess" id="yum"><span>Number Guess</span></a>
         </div>
         <div class="col-3" style="margin-top: 10px;margin-left: 5%">
-            <a href="/numberguess" id="yum"><span>Number Guess</span></a>
+            <a href="/graph" id="yum"><span>Graph</span></a>
         </div>
         <div class="col-3" style="margin-top: 10px;margin-left: 5%">
             <a href="/numberguess" id="yum"><span>Number Guess</span></a>
