--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -19,7 +19,7 @@
                     Projects
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                    <a class="dropdown-item" href="/mainabout/">Project Green</a>
+                    <a class="dropdown-item" href="/projectgreen">Project Green</a>
                     <a class="dropdown-item" href="/worldclock">World Clock</a>
                     <a class="dropdown-item" href="/translator">Language Translator</a>
                     <a class="dropdown-item" href="/mainabout">Rankings</a>
@@ -35,6 +35,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link" href="/feedback">Give Us Feedback!</a>
             </li>
+            <a class="nav-link" href="/faq">FAQ</a>
         </ul>
 
     </div>
